# Proyecto1-Redes-Protocolos

./: .env  .gitignore  README.md  intel_cache.json  servers.yaml
app/: cli.py  config.py  main.py  mcp_porthunter.py
app/llm/: memory.py  openrouter_client.py
app/mcp/: client_manager.py  clients.py  fs_client.py  logger.py
captures/: emote_mcp-20250917-0933-marked.pcapng  remote_mcp-20250917-0933.pcapng
logs/chat/: session-20250905-170232.jsonl  session-20250906-154219.jsonl  session-20250906-223205.jsonl  session-20250916-161744.jsonl  session-20250916-172339.jsonl  session-20250918-195920.jsonl
logs/mcp/: mcp-20250905.jsonl  mcp-20250906.jsonl  mcp-20250916.jsonl  mcp-20250917.jsonl
scripts/: benchmark_porthunter.py  smoke_test_openrouter.py
server/porthunter_mcp/: pyproject.toml
server/porthunter_mcp/porthunter/: server.py  stdio_server.py
server/porthunter_mcp/porthunter/utils/: cache.py  pcap.py
server/porthunter_mcp/porthunter_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/remote_mcp/: Dockerfile  pyproject.toml
server/remote_mcp/remote_utils/: server.py
